@@ -30,6 +30,7 @@
 	moved private members and support classes into C++ API's .cpp files
 	removed -revision during link and adopted Semantic Versioning 2.0
 	added missing get*List methods to Java API
+	removed errant information_schema views from getTableList with mysql
 
 0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
 	added informix connection module
